Fixed layout issue

--- a/phpmyfaq/admin/style/admin.css
+++ b/phpmyfaq/admin/style/admin.css
@@ -185,7 +185,8 @@ code {
 
 /* Navigation */
 nav {
-    position: absolute; left: 0; top: 108px; width: 100%; background: url(../images/nav_background.png); }
+    position: absolute; left: 0; top: 108px; width: 100%; height: 44px; overflow: hidden;
+    background: url(../images/nav_background.png); }
 nav ul {
     margin: 0 auto; width: 980px; list-style: none; }
 nav ul li {
